--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <div class="container">
       <p class="attention">This is my brand new website</p>
       <p>It's not that great yet</p>
+      <p>COPYRIGHT EGILL 2021!!!!!11😎!!</p>
     </div>
     <a href="gallery.html">
       <img
